更改项目配置

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,4 +1,4 @@
-@import '../../../pper-vue-kernal/src/assets/style/color.scss';
+@import 'pper-vue-kernal/src/assets/style/color.scss';
 $color-primary: #409eff !global; // 主色
 $color-info: #909399 !global;
 $color-success: #67c23a !global;
@@ -16,4 +16,4 @@ $color-border-2: #e4e7ed !global;
 $color-border-3: #ebeef5 !global;
 $color-border-4: #f2f6fc !global;
 $color-bg: #f5f5f5 !global;
-@import '../../../pper-vue-kernal/src/assets/style/register.scss';
+@import 'pper-vue-kernal/src/assets/style/register.scss';
